Added desktop pattern

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             alt="Box illustration"
             class="desktop-box"
           />
+          <div class="desktop-pattern">
+            <img
+              src="./images/bg-pattern-desktop.svg"
+              alt="desktop pattern"
+              class="desktop-pattern-img"
+            />
+          </div>
         </div>
         <div class="card-body">
           <h1 class="card-title">faq</h1>
